# platformer

./: .gitignore  .gitmodules  .vimspector.json  meson.build  run.sh
res/: level.json
src/: MapLevel.cpp  MapLevel.hpp  components.hpp  main.cpp  tileson.hpp
tiled/: level.tmx  tileset.tsx
